--- a/article.html
+++ b/article.html
@@ -6,7 +6,7 @@
 <style>
    
    body{
-    background-image: url("savi.jpg");
+    background-image: url('savi.jpg');
     background-size: cover;
    }
 
